fix the stretchable grid so that each cell looks more like a square

--- a/style.css
+++ b/style.css
@@ -1,39 +1,67 @@
 body,
 html {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  /* width: 100%; */
+  /* height: 100%; */
+  margin: auto;
   background: black;
   overflow: hidden;
 }
 h1 {
-  font-family: 'Luckiest Guy',
-  cursive;
+  font-family: 'Luckiest Guy', cursive;
   color: white;
-  font-size: 60px;
+  font-size: 72px;
   text-align: center;
+  letter-spacing: 2px;
 }
 
 .board {
   display: grid;
+  margin: auto;
+  /*
+   * 3x3 grid
+   * boxes:   144 x 3 = 432px
+   * borders: 24 x 2 = 48px
+   * boxes + border: 480px
+   */
+  width: 480px;
+  height: 480px;
+
   grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto auto;  /* ? */
+  grid-template-rows: auto auto auto;
+  /* ? */
+  /* grid-template-columns: 144px 144px 144px; */
+  /* grid-template-rows: 144px 144px 144px; */
+
+  /* ? */
   grid-gap: 24px;
   background-color: white;
-  font-family: 'Luckiest Guy',
-  cursive;
+  font-family: 'Luckiest Guy', cursive;
   color: white;
-  font-size: 90px;
+  font-size: 144px;
+  font-weight: 900; /* extra bold */
+  line-height: 186px;
   text-align: center;
 }
 
 .box {
   background-color: black;
-  min-width: 96px;
-  min-height: 96px;
-  padding: 48px 12px 0px 12px;
+  width: 144px;
+  height: 144px;
+  
+  /* ? */
+  /* position: relative; */
+  /* top: 50%; */
+  /* transform: translateY(-50%); */
+  /* ? */
+  /* text-align: center; */
+  /* vertical-align: middle; */
+  /* line-height: 144px; */
+  /* ? */
+  /* padding: 24px 12px 0px 12px; */
 }
 
+
+/* 
 .box.topleft {}
 .box.topleft.x {
   background-color: red;
@@ -43,7 +71,6 @@ h1 {
   background-color: blue;
 }
 
-/* 
 .box.top {}
 .box.top.x {}
 .box.top.o {}
